docs(http): fetch swagger docs back
